# django-rest-verification

./: .gitignore  README.rst  setup.cfg
django_rest_verification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
verification/: __init__.py  admin.py  apps.py  base.py  conf.py  exceptions.py  models.py  permissions.py  serializers.py  tasks.py  validators.py  verification.py  views.py
verification/migrations/: 0001_initial.py
