[metadata]
name = django-rest-verification
version = 0.11
description = A Django app to conduct code-based verification.
long_description = file: README.rst
url = https://github.com/HosseinMohammadii/
author = Hossein Mohammadi
author_email = hossein.mohammadi.1201@gmail.com
license = MIT-License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
